# gtnh-platform

./: .aiignore  .clang-tidy  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGES_SUMMARY.md  CMakeLists.txt  CMakePresets.json  CPP_CONCEPTS_EXPLAINED.md  README.md  ROADMAP.md  SIGUSR1_CHANGES_SUMMARY.md  SIGUSR1_IMPLEMENTATION.md  VERSION_FLAG_IMPLEMENTATION.md  VERSION_FLAG_IMPLEMENTATION_COMPLETE.md  completed_tasks.md  conanfile.txt  run.sh
src/libs/libgtnh-net/: CMakeLists.txt
src/libs/libgtnh-net/src/: frame.cpp  io_uring_connection.cpp  io_uring_context.cpp  router_client.cpp  server.cpp  tcp_connector.cpp
src/libs/libgtnh-net/test/: CMakeLists.txt  test.h  test_context.cpp  test_echo.cpp  test_frame.cpp  test_integration.cpp  test_main.cpp  test_toctou.cpp  toctou_standalone.cpp
src/libs/machine_registry/: CMakeLists.txt  MachineRegistry.cpp  MachineRegistry.h
src/libs/quest_lib/: CMakeLists.txt  QuestData.cpp  QuestData.h  QuestGraph.cpp  QuestGraph.h  QuestTypes.cpp  QuestTypes.h
src/libs/recipe_manager_lib/: CMakeLists.txt  ConditionEvaluator.cpp  ConditionEvaluator.h  ItemRegistry.cpp  ItemRegistry.h  RecipeConditions.h  RecipeManager.cpp  RecipeManager.h  RecipeTypes.h
src/services/chunk_store/: AGENTS.md  CMakeLists.txt  README.md  chunk_store_cli_test.cpp  main.cpp
src/services/chunk_store/Chunk/: Chunk.h
src/services/chunk_store/Network/: ChunkStoreService.cpp  ChunkStoreService.h  FrameCodec.h  RouterClient.cpp  RouterClient.h
src/services/chunk_store/Storage/: CASHandler.cpp  CASHandler.h  ChunkStore.cpp  ChunkStore.h  ClockCache.h  EncodePipeline.cpp  EncodePipeline.h  IBlockStore.h  SectionCodec.cpp  SectionCodec.h  WorkQueue.cpp  WorkQueue.h  chunk_cache_test.cpp  chunk_dirty_test.cpp  chunkd_load_test.cpp  clock_cache_bench.cpp  clock_cache_test.cpp
src/services/chunk_store/World/: ServerWorld.cpp  ServerWorld.h
src/services/entity_state_store/: CMakeLists.txt  EntityStateStorage.cpp  EntityStateStorage.h  cache.cpp  cache.h  main.cpp  test_persistence.cpp
src/services/entity_state_store/Client/: ChunkStoreClient.cpp  ChunkStoreClient.h  MessageRouterClient.cpp  MessageRouterClient.h
src/services/game_client/: AGENTS.md  CMakeLists.txt  GameClient.cpp  GameClient.h  README.md  main.cpp
src/services/game_client/Cache/: ChunkLoadManager.cpp  ChunkLoadManager.h  ChunkMeshCache.cpp  ChunkMeshCache.h  ChunkNeighborCache.cpp  ChunkNeighborCache.h  MeshManager.cpp  MeshManager.h
src/services/game_client/Camera/: Camera.cpp  Camera.h
src/services/game_client/Common/: BlockType.h  BlockVertex.h  InputState.h  Inventory.h  NamedThreadPool.h  Types.h
src/services/game_client/Crafting/: ClientItemRegistry.cpp  ClientItemRegistry.h  ClientMachineRecipeDB.cpp  ClientMachineRecipeDB.h  ClientRecipeDB.cpp  ClientRecipeDB.h
src/services/game_client/Network/: ConcurrentMemoryPool.cpp  ConcurrentMemoryPool.h  NetClient.cpp  NetClient.h
src/services/game_client/Render/: BlockRenderRegistry.h  CableColors.h  CableMeshBuilder.cpp  CableMeshBuilder.h  ChunkMeshBuilder.cpp  ChunkMeshBuilder.h  ChunkMeshProvider.cpp  ChunkMeshProvider.h  FaceTextureRegistry.h  MinimapWorldAdapter.cpp  MinimapWorldAdapter.h  PipeMeshBuilder.cpp  PipeMeshBuilder.h  RenderBridge.cpp  RenderBridge.h
src/services/game_client/RenderLib/: CMakeLists.txt
src/services/game_client/UI/: BlockUIFactory.cpp  BlockUIFactory.h  CMakeLists.txt  InputManager.cpp  InputManager.h  UIDefaults.cpp  UIDefaults.h  UIManager.cpp  UIManager.h  Window.cpp  Window.h
src/services/game_client/World/: ChunkStorage.cpp  ChunkStorage.h  ChunkView.cpp  ChunkView.h  InteractionSystem.cpp  InteractionSystem.h  World.cpp  World.h
src/services/game_client/tests/: DragManager_test.cpp  test_item_registry.cpp
src/services/gateway/: CMakeLists.txt  gateway.cpp  gateway.h  main.cpp
src/services/gateway/Integration/: InventoryIntegration.cpp  InventoryIntegration.h
src/services/message_router/: CMakeLists.txt  dummy.go  go.mod  main.go  router.go
src/services/pipe_network/: AGENTS.md  CMakeLists.txt  CableGraph.cpp  CableGraph.h  CableLoss.h  CableOverheat.h  CableTypes.h  FluidRegistry.cpp  FluidRegistry.h  PipeBlockIds.h  PipeNetwork.cpp  PipeNetwork.h  PipeNetworkService.cpp  PipeNetworkService.h  main.cpp  pipe_network_test.cpp
src/services/pipe_network/Client/: MessageRouterClient.cpp  MessageRouterClient.h
src/services/recipe_manager/: CMakeLists.txt  RecipeManagerService.cpp  RecipeManagerService.h  main.cpp
src/services/recipe_manager/Client/: MessageRouterClient.cpp  MessageRouterClient.h
src/services/simulation_core/: CMakeLists.txt  InventoryActionHandler.cpp  InventoryActionHandler.h  Saturate.h  main.cpp
src/services/simulation_core/Actions/: ActionDispatcher.cpp  ActionDispatcher.h  ElectricDrillHandler.cpp  ElectricDrillHandler.h  IActionHandler.h  MachineSlotHandler.cpp  MachineSlotHandler.h  MiningCalculator.h  SetBlockCASHandler.cpp  SetBlockCASHandler.h  ToolActionHandler.cpp  ToolActionHandler.h  WrenchActionHandler.cpp  WrenchActionHandler.h  WrenchHandler.cpp  WrenchHandler.h
src/services/simulation_core/Common/: Logger.h  MainThreadQueue.h  xyz.h
src/services/simulation_core/Crafting/: CMakeLists.txt  CraftInventoryFlow.cpp  CraftInventoryFlow.h  CraftRequestHandler.cpp  CraftRequestHandler.h  GridPatternMatcher.cpp  GridPatternMatcher.h  RecipeCompletedHandler.cpp  RecipeCompletedHandler.h  WorkbenchStateManager.cpp  WorkbenchStateManager.h
src/services/simulation_core/ECS/: SimulationEngine.cpp  SimulationEngine.h
src/services/simulation_core/Network/: FluidClient.cpp  FluidClient.h  IEventPublisher.h  ITopicHandler.h  ItemClient.cpp  ItemClient.h  PipeEnergyClient.cpp  PipeEnergyClient.h  RouterEventPublisher.cpp  RouterEventPublisher.h  SimCoreMessageHandler.cpp  SimCoreMessageHandler.h  (+2 more)
src/services/world_generator/: AGENTS.md  CMakeLists.txt  GenerationQueue.cpp  GenerationQueue.h  OreConfig.cpp  OreConfig.h  OreGenerator.cpp  OreGenerator.h  OreTypes.h  README.md  WorldGenerator.cpp  WorldGenerator.h
(+573 files in other folders)
